graph visualization using tensorboard

--- a/tensorflow from basic to advance/Tensorflow Basic.ipynb
+++ b/tensorflow from basic to advance/Tensorflow Basic.ipynb
@@ -1957,6 +1957,86 @@
   },
   {
    "cell_type": "markdown",
+   "id": "012fe7b3",
+   "metadata": {},
+   "source": [
+    "This graph can be visualized using tensorboard or alternatively using graphviz python package"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "id": "5af504b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.python.ops import summary_ops_v2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "id": "98111ba6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-d6e4fa18cc03c632\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-d6e4fa18cc03c632\");\n",
+       "          const url = new URL(\"/\", window.location);\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create a summary writer for TensorBoard\n",
+    "writer = tf.summary.create_file_writer('logs')\n",
+    "\n",
+    "# Use the summary writer to write the graph\n",
+    "with writer.as_default():\n",
+    "    summary_ops_v2.graph(tf_simple_relu.get_concrete_function(tf.constant(1)).graph.as_graph_def())\n",
+    "\n",
+    "# Start TensorBoard in the notebook\n",
+    "%load_ext tensorboard\n",
+    "%tensorboard --logdir logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79691ca1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8020b8e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "7518ea20",
    "metadata": {},
    "source": [
@@ -2192,7 +2272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 295,
    "id": "b942e809",
    "metadata": {},
    "outputs": [
@@ -2201,7 +2281,9 @@
      "output_type": "stream",
      "text": [
       "Tracing!\n",
+      "will print while executing\n",
       "tf.Tensor(6, shape=(), dtype=int32)\n",
+      "will print while executing\n",
       "tf.Tensor(11, shape=(), dtype=int32)\n"
      ]
     }
@@ -2209,8 +2291,9 @@
    "source": [
     "@tf.function\n",
     "def a_function_with_python_side_effect(x):\n",
-    "  print(\"Tracing!\") # An eager-only side effect.\n",
-    "  return x * x + tf.constant(2)\n",
+    "    print(\"Tracing!\") # An eager-only side effect.\n",
+    "    tf.print(\"will print while executing\")\n",
+    "    return x * x + tf.constant(2)\n",
     "\n",
     "# This is traced the first time.\n",
     "print(a_function_with_python_side_effect(tf.constant(2)))\n",
@@ -2220,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 296,
    "id": "f8fba284",
    "metadata": {},
    "outputs": [
@@ -2228,7 +2311,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "will print while executing\n",
       "tf.Tensor(18, shape=(), dtype=int32)\n",
+      "will print while executing\n",
       "tf.Tensor(27, shape=(), dtype=int32)\n"
      ]
     }
