--- a/tensorflow from basic to advance/Tensorflow Basic.ipynb
+++ b/tensorflow from basic to advance/Tensorflow Basic.ipynb
@@ -1957,7 +1957,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "012fe7b3",
+   "id": "46de7ffa",
    "metadata": {},
    "source": [
     "This graph can be visualized using tensorboard or alternatively using graphviz python package"
@@ -1966,7 +1966,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "5af504b5",
+   "id": "30907b65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1976,8 +1976,10 @@
   {
    "cell_type": "code",
    "execution_count": 298,
-   "id": "98111ba6",
-   "metadata": {},
+   "id": "227afaee",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2022,7 +2024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79691ca1",
+   "id": "d043e234",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2030,7 +2032,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8020b8e1",
+   "id": "b60f014b",
    "metadata": {},
    "outputs": [],
    "source": []
