--- a/tensorflow from basic to advance/Tensorflow operations.ipynb
+++ b/tensorflow from basic to advance/Tensorflow operations.ipynb
@@ -26,11 +26,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-07-12 19:56:48.525486: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-07-12 19:56:48.675869: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-07-12 19:56:48.676764: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-07-14 19:01:39.803843: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-07-14 19:01:39.937467: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-07-14 19:01:39.939318: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-07-12 19:56:49.649493: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-07-14 19:01:41.293634: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "795014fc",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
        "2"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "843933bf",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
        "array([1, 1, 0])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "8a71f849",
    "metadata": {},
    "outputs": [
@@ -372,7 +372,7 @@
        "array([2, 1])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "6127daf4",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "aca803a5",
    "metadata": {},
    "outputs": [
@@ -434,7 +434,7 @@
        "array([0, 0, 1])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "856f6632",
    "metadata": {},
    "outputs": [
@@ -457,7 +457,7 @@
        "array([0, 2])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "id": "667381b6",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "array([1, 4, 3, 2], dtype=int32)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "d415bd5b",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
        "array([0, 0, 3, 0, 0, 0, 0, 0, 0, 0, 3], dtype=int32)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "id": "eee189df",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
        "array([0, 0, 3, 0, 0], dtype=int32)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "fc445080",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 20,
    "id": "215ff34c",
    "metadata": {},
    "outputs": [
@@ -604,7 +604,7 @@
        "       [1, 1]], dtype=int32)>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 21,
    "id": "f4bd150e",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "       [0, 0, 0, 0, 0, 0, 0]], dtype=int32)>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,9 +655,317 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e5cf886",
+   "metadata": {},
+   "source": [
+    "**To do:**\n",
+    "- find out about weight parameter in confuision metrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba9fabad",
+   "metadata": {},
+   "source": [
+    "### count_nonzero\n",
+    "Computes number of nonzero elements across dimensions of a tensor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "37420556",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(3,), dtype=int64, numpy=array([1, 1, 2])>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = tf.constant([[0, 0, 1],\n",
+    "                 [1, 2, 4]])\n",
+    "tf.math.count_nonzero(x, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "907cde29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2,), dtype=int64, numpy=array([1, 3])>"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.math.count_nonzero(x, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3d27ec0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 1), dtype=int64, numpy=\n",
+       "array([[1],\n",
+       "       [3]])>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.math.count_nonzero(x, axis=1, keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "91302055",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1, 1), dtype=int64, numpy=array([[4]])>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.math.count_nonzero(x, axis=[0, 1], keepdims=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96eb108c",
+   "metadata": {},
+   "source": [
+    "### cumprod\n",
+    "Compute the cumulative product of the tensor x along axis.\n",
+    "[a, b, c] --> [a, a * b, a * b * c]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a7990a80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+       "array([[0, 0, 1],\n",
+       "       [0, 0, 4]], dtype=int32)>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = tf.constant([[0, 0, 1],\n",
+    "                 [1, 2, 4]])\n",
+    "\n",
+    "tf.math.cumprod(x, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "545a8b89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2, 3), dtype=int32, numpy=\n",
+       "array([[0, 0, 0],\n",
+       "       [1, 2, 8]], dtype=int32)>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.math.cumprod(x, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "651d5218",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(4,), dtype=int32, numpy=array([1, 1, 2, 6], dtype=int32)>"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if exclusive is true the\n",
+    "# item[i] = item[1] * item[2]...*item[i-1]\n",
+    "x = tf.constant([1,2,3,4])\n",
+    "tf.math.cumprod(x, exclusive=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "500e7ac8",
+   "metadata": {},
+   "source": [
+    "cum_x[0] = 1\n",
+    "\n",
+    "cum_x[1] = x[0] = 1\n",
+    "\n",
+    "cum_x[2] = x[0] * x[1] = 1 * 2 = 2\n",
+    "\n",
+    "cum_x[3] = x[0] * x[1] * x[2] = 1 * 2 * 3 = 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41fcf8a1",
+   "metadata": {},
+   "source": [
+    "### cumsum\n",
+    "- Similar to cumprod, instead of produce, summation will be performed.\n",
+    "- Compute the cumulative sum of the tensor x along axis.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c434239",
+   "metadata": {},
+   "source": [
+    "### divide\n",
+    "element-wise divide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "69d2f016",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2,), dtype=float32, numpy=array([5., 4.], dtype=float32)>"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [10.,20.]\n",
+    "y = [2, 5]\n",
+    "tf.math.divide(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "114a0ab7",
+   "metadata": {},
+   "source": [
+    "### divide_no_nan\n",
+    "- save divide, return zero in case of zero divisible case"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b59d01a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2,), dtype=float32, numpy=array([ 0., 10.], dtype=float32)>"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = [0., 2.]\n",
+    "tf.math.divide_no_nan(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "227555e8",
+   "metadata": {},
+   "source": [
+    "### equal\n",
+    "- Returns the truth value of (x == y) element-wise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "4a7d6b08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(2,), dtype=bool, numpy=array([ True, False])>"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [2. , 3.]\n",
+    "y = [2. , 4.]\n",
+    "tf.math.equal(x, y)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cc17136",
+   "id": "1a6e8845",
    "metadata": {},
    "outputs": [],
    "source": []
