--- a/keras basic to advance/Overview.ipynb
+++ b/keras basic to advance/Overview.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# Keras API components\n",
     "The core data structures of Keras are layers and models.\n",
-    "- **layery**: \n",
+    "- **layers**: \n",
     "    - A layer is a simple input/output transformation \n",
     "    - The tf.keras.layers.Layer class is the fundamental abstraction in Keras. A Layer encapsulates a state (weights) and some computation (defined in the tf.keras.layers.Layer.call method).\n",
     "    - You can also use layers to handle data preprocessing tasks like normalization and text vectorization.\n",
@@ -304,7 +304,7 @@
     "- However, Keras also provides a full-featured model class called **tf.keras.Model**. It inherits from **tf.keras.layers.Layer**, so a Keras model can be used and nested in the same way as Keras layers. \n",
     "\n",
     "- class inheritances:\n",
-    "    - **tf.Module --> keras.layers.Layers ---> keras.Modle**\n",
+    "    - **tf.Module --> keras.layers.Layers ---> keras.Model**\n",
     "    - notation: base-class --> derived_class"
    ]
   },
