--- a/keras basic to advance/CNN implementation from scratch.ipynb
+++ b/keras basic to advance/CNN implementation from scratch.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "9d862df3",
    "metadata": {},
    "outputs": [
@@ -93,11 +93,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-09 18:08:31.166769: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-08-09 18:08:31.366675: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2023-08-09 18:08:31.367661: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-08-25 06:43:28.978069: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-08-25 06:43:29.216979: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-08-25 06:43:29.219497: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-08-09 18:08:32.437103: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2023-08-25 06:43:30.613765: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -111,12 +111,16 @@
    "metadata": {},
    "source": [
     "##  Zero Padding\n",
-    "Zero padding refers to the practice of adding extra empty values, usually zeros, to the beginning, end, or sides of data,"
+    "Zero padding refers to the practice of adding extra empty values, usually zeros, to the beginning, end, or sides of data,\n",
+    "\n",
+    "`tf.pad(\n",
+    "    tensor, paddings, mode='CONSTANT', constant_values=0, name=None\n",
+    ")`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "fb4865c9",
    "metadata": {},
    "outputs": [
@@ -130,7 +134,7 @@
        "       [0, 0, 0, 0, 0]], dtype=int32)>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "0205d3eb",
    "metadata": {},
    "outputs": [],
@@ -156,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "b57a0039",
    "metadata": {},
    "outputs": [
@@ -170,7 +174,7 @@
        "       [0, 0, 0, 0, 0]], dtype=int32)>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "id": "355b1723",
    "metadata": {},
    "outputs": [
@@ -200,7 +204,7 @@
        "       [0, 0, 0, 0, 0, 0, 0]], dtype=int32)>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
