day 16: implemented GRU as well as a toy task for model testing

--- a/architecture implementations/RNN/RNN_implementation_from_scratch.ipynb
+++ b/architecture implementations/RNN/RNN_implementation_from_scratch.ipynb
@@ -222,7 +222,7 @@
     "        # initialize hidden state for the first time step\n",
     "        h_prev = torch.zeros(self.batch_size, self.hidden_size).to(input_seq.device)\n",
     "\n",
-    "        for t in range(0, self.seq_length):\n",
+    "        for t in range(0, self.seq_length-1):\n",
     "            x = input_seq[:, t, :]\n",
     "            h_prev = self.rnn_cell(x, h_prev)\n",
     "            outputs.append(h_prev)\n",
@@ -405,7 +405,7 @@
     "        h_prevs = [torch.zeros(self.batch_size, self.hidden_size).to(input_seq.device)\n",
     "                   for _ in range(self.num_layers)]\n",
     "        print(h_prevs)\n",
-    "        for t in range(0, self.seq_length):\n",
+    "        for t in range(0, self.seq_length-1):\n",
     "            x = input_seq[:, t, :]\n",
     "\n",
     "            for layer_idx in range(self.num_layers):\n",
