day 20: minor fix in the RNN documentations

--- a/architecture implementations/2. RNN/1. RNN_implementation_from_scratch.ipynb
+++ b/architecture implementations/2. RNN/1. RNN_implementation_from_scratch.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "![Untitled Diagram.drawio(1).png](attachment:b1370f61-0665-4ba8-a7da-0b583b1606fb.png)\n",
     "\n",
-    "Natural langauges or sentences are in a sequential form where order of words in the sentence matters.\n",
+    "Natural languages or sentences are in a sequential form where order of words in the sentence matters.\n",
     "For instance, ***\"man killed lion\"*** and ***\"lion killed man\"*** has two different meaning. \n",
     "1. **Since we pass the entire sentence (input features) at once in FFNN ,there is no information about the orders of input features**\n",
     "    - FFNN treats input features independently\n",
@@ -71,7 +71,7 @@
    "id": "2fd9a4b1-25c3-4411-afa1-f279fd51c839",
    "metadata": {},
    "source": [
-    "So to solve the limitation of FFNN, we need to build someting that should be capable of taking varying length input size as well as preserve the order of the sequencial data. In a simple word, we need to build a model that reads one word at a time from a sentence instead of reading entire sentence at once which FFNN was doing."
+    "So to solve the limitation of FFNN, we need to build something that should be capable of taking varying length input size as well as preserve the order of the sequential data. In a simple word, we need to build a model that reads one word at a time from a sentence instead of reading entire sentence at once which FFNN was doing."
    ]
   },
   {
@@ -92,7 +92,7 @@
    "id": "194ba151-ec73-496d-92b8-320e05893e2c",
    "metadata": {},
    "source": [
-    "In the above figure, we are passing one word at a time to the model in a loop along with the previous step output. This architecture has solved the previous limitation of the FFNN where instead of passing all the word at one we are passing one word at a time in a loop as well as passing the information from previous step to the next step which basically conveying the information in a sequential order, thus model gets the inforamation about the order of the words in the sentence."
+    "In the above figure, we are passing one word at a time to the model in a loop along with the previous step output. This architecture has solved the previous limitation of the FFNN where instead of passing all the word at once we are passing one word at a time in a loop as well as passing the information from previous step to the next step which basically conveying the information in a sequential order, thus model gets the inforamtion about the order of the words in the sentence."
    ]
   },
   {
@@ -100,7 +100,7 @@
    "id": "7c0d1b44-c25d-4eae-ba4a-7cda5b44f0cc",
    "metadata": {},
    "source": [
-    "Here is a sudo code to understand the idea about time step in the above diagram\n",
+    "Here is a pseudo code to understand the idea about time step in the above diagram\n",
     "```\n",
     "# ---In FFNN ---------\n",
     "output = FFNN(sentence)\n",
@@ -131,8 +131,8 @@
     "\n",
     "Here we just add the previous output with the current word and return the resultant vector as a current output. But wait a minute there is an issue with this approach:\n",
     "\n",
-    "- both word vector and output vector needs to have the save dimension, otherwise we have to tuncatinate or adding padding to make it work\n",
-    "- also the final output is just the sum of all the word vector and the initial output vector, there is no learning parameter, thus there is no learning.\n",
+    "- both word vector and output vector needs to have the save dimension, otherwise we have to truncate or add padding to make it work\n",
+    "- also the final output is just the sum of all the word vectors and the initial output vector, there is no learning parameter, thus there is no learning.\n",
     "\n",
     "Now let's overcome these two major issues"
    ]
@@ -169,15 +169,13 @@
    "metadata": {},
    "source": [
     "Here, \n",
-    "- we have perform concatination instead of vector addition, so it can handle different size of word vector and output vector\n",
-    "- we have added a single layer neural network which is learnable as well as project the concatinated vector to a output vector dimension\n",
-    "- We used an activation function \"tanh\" because\n",
-    "    - it maps the value to the range (-1, 1), that captures Polarity (positive/negative influence)\n",
+    "- we performed concatenation instead of vector addition, so it can handle different size of word vector and output vector\n",
+    "- we then added a single layer neural network which is learnable as well as project the concatenated vector to a output vector dimension\n",
+    "- We used an activation function \"tanh\" because it maps the value to the range (-1, 1), that captures Polarity (positive/negative influence)\n",
     "       - +1 is a positive influence\n",
     "       - -1 is a negative influence\n",
     "    - Sigmoid’s gradient max is 0.25, while tanh’s gradient max is 1, meaning less prune to vanishing gradient descent.\n",
-    "    - helps in stable training\n",
-    "   "
+    "    - helps in stable training"
    ]
   },
   {
@@ -185,7 +183,7 @@
    "id": "91b16de1-00bb-447e-87b0-3fe930035f6f",
    "metadata": {},
    "source": [
-    "congralulations, you have successfully architecture a RNN model. 🎉🥳"
+    "congratulations, you have successfully architecture a RNN model. 🎉🥳"
    ]
   },
   {
@@ -272,7 +270,7 @@
    "metadata": {},
    "source": [
     "In sequence-to-one model, we process all the words(tokens) and use the last output as a prediction of the model.\n",
-    "So far out RNN model will process all the words and but sill does not generate the prediction output. For instance, we need to build a model that predict the sentiment of the given sentence, our model can process all the word and generate a final output vector but this vector does not tell which sentiment class it belongs yet. To make it predict the sentiment class we need to add one extra layer of single layer neural network that projects the final output vector space to the sentiment class space."
+    "So far our RNN model will process all the words and but sill does not generate the prediction output. For instance, we need to build a model that predict the sentiment of the given sentence, our model can process all the word and generate a final output vector but this vector does not tell which sentiment class it belongs yet. To make it predict the sentiment class we need to add one extra layer of single layer neural network that projects the final output vector space to the sentiment class space."
    ]
   },
   {
@@ -323,7 +321,7 @@
     "h_t = tanh(h_t)\n",
     "$$\n",
     "$$\n",
-    "y\\_pred = activation_function ( h_t * V + b_)\n",
+    "y\\_pred = activation_function ( h_t * V + b\\_)\n",
     "$$\n",
     "\n",
     "where,\n",
@@ -589,7 +587,7 @@
    "id": "62d6c518-36f7-441d-b9ef-94cbd09996d3",
    "metadata": {},
    "source": [
-    "predicted output from the final step after passing through Singel Layer neural network or Fully connected linear layer. Note that we haven't pass it through an activation function because right now we haven't decide the type of task we are going to perform. I hope you get the idea."
+    "predicted output from the final step after passing through Single Layer neural network or Fully connected linear layer. Note that we haven't pass it through an activation function because right now we haven't decide the type of task we are going to perform. I hope you get the idea."
    ]
   },
   {
@@ -782,32 +780,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "id": "1e19603f-5eeb-484c-aa95-b85a966741aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hidden_states, final_output = rnn(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4c27e9ed-8908-4536-acb5-954f9e0893d1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[[-0.1639,  0.8532, -0.9695, -0.3960],\n",
-       "          [ 0.9998,  0.9939, -0.8532,  0.9979],\n",
-       "          [ 0.9999,  0.9994,  0.9946,  0.9991]],\n",
-       " \n",
-       "         [[-0.0072,  0.1291,  0.9998, -0.9358],\n",
-       "          [-0.2082, -0.9792, -0.9943, -0.6203],\n",
-       "          [-0.9994, -1.0000,  0.9943, -0.9399]]], grad_fn=<CatBackward0>),\n",
-       " tensor([[[ 0.4025, -0.1704]],\n",
-       " \n",
-       "         [[-0.0059,  0.3164]]], grad_fn=<ViewBackward0>))"
+       "torch.Size([2, 3, 4])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rnn(x)"
+    "hidden_states.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "e3a799e7-ebdb-47c7-ac0e-071dd58be74e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2, 1, 2])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_output.shape"
    ]
   },
   {
@@ -859,12 +879,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2e7ea150-d9a8-407f-94ba-fb00eff0de8b",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09f56a3b-cca9-47bd-ab6d-7a62c35e6120",
    "metadata": {},
-   "source": [
-    "# Limitation of "
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
