--- a/architecture implementations/2. RNN/2. RNN implementation testing.ipynb
+++ b/architecture implementations/2. RNN/2. RNN implementation testing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "48fd14f9-e623-468b-8449-76828be39de1",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5fae179a-5dac-4fda-bf44-4975784a2106",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 36,
    "id": "110ac651-40f2-40c7-9c56-02b8f2fe2656",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 37,
    "id": "a79a13e4-b150-4308-98b3-8e3be95e3f1d",
    "metadata": {},
    "outputs": [],
@@ -134,57 +134,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 38,
    "id": "6d98edcb-dea4-4f0c-84a3-2d9b5c2e15d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq = torch.arange(0, seq_len + 1).float().unsqueeze(0).repeat(batch_size, 1)  # (batch, seq_len+1)\n",
-    "x = seq[:, :-1].unsqueeze(-1) # input: (batch, seq_len, 1)\n",
-    "y = seq[:, 1:].unsqueeze(-1)   # target: (batch, seq_len, 1)"
+    "# seq = torch.arange(0, seq_len + 1).float().unsqueeze(0).repeat(batch_size, 1)  # (batch, seq_len+1)\n",
+    "# x = seq[:, :-1].unsqueeze(-1) # input: (batch, seq_len, 1)\n",
+    "# y = seq[:, 1:].unsqueeze(-1)   # target: (batch, seq_len, 1)\n",
+    "# x.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "id": "e052893d-95c1-4867-97da-41a845e54024",
+   "execution_count": 39,
+   "id": "1fd47572-fac3-44de-981c-fe87244491a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[0.],\n",
+       "         [1.],\n",
+       "         [2.],\n",
+       "         [3.],\n",
+       "         [4.]]])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# seq = torch.randint(0, 9, (batch_size, seq_len, 1), dtype=torch.float)\n",
-    "# x = seq\n",
-    "# y = seq + 1"
+    "torch.arange(5, dtype=torch.float).view(1, 5, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 40,
    "id": "1802a9ec-915e-4fca-9694-5fdeb40fdedd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pick random starting numbers for each batch (e.g. 0–99)\n",
-    "starts = torch.randint(0, 20, (2, 1, 1), dtype=torch.float)\n",
+    "starts = torch.randint(0, 10, (batch_size, 1, 1), dtype=torch.float)\n",
+    "\n",
     "# Create offset sequence [0, 1, 2, ..., seq_len-1]\n",
     "offsets = torch.arange(5, dtype=torch.float).view(1, 5, 1)\n",
     "# Add start + offsets to form sequences\n",
+    "\n",
     "x = starts + offsets\n",
     "y = x + 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 41,
    "id": "7c85fe57-e260-46c1-bfbf-a847cc31531d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([2, 5, 1])"
+       "torch.Size([16, 5, 1])"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,17 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 42,
    "id": "c12e9e6a-b9c0-4d90-a5f5-d64203945acc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([2, 5, 1])"
+       "torch.Size([16, 5, 1])"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +232,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 43,
+   "id": "012ef060-902a-4edc-b12d-cf2acf64d519",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[5.],\n",
+      "        [6.],\n",
+      "        [7.],\n",
+      "        [8.],\n",
+      "        [9.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "7902fadd-1743-4691-9d58-ca0fd34ef66b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 6.],\n",
+      "        [ 7.],\n",
+      "        [ 8.],\n",
+      "        [ 9.],\n",
+      "        [10.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "9220cf35-7bc9-4295-a61e-e92eb2df6764",
    "metadata": {},
    "outputs": [
@@ -229,11 +289,11 @@
       " 7.0 -> 8.0\n",
       " 8.0 -> 9.0\n",
       " 9.0 -> 10.0\n",
+      " 8.0 -> 9.0\n",
       " 9.0 -> 10.0\n",
       " 10.0 -> 11.0\n",
       " 11.0 -> 12.0\n",
-      " 12.0 -> 13.0\n",
-      " 13.0 -> 14.0\n"
+      " 12.0 -> 13.0\n"
      ]
     }
    ],
@@ -244,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 46,
    "id": "d1cdef20-3631-40bc-a6d6-ecdc34a095ad",
    "metadata": {},
    "outputs": [],
@@ -256,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 47,
    "id": "12b7c7dc-7740-44a9-a94c-60b6b9901324",
    "metadata": {},
    "outputs": [
@@ -264,26 +324,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0 - loss: 45.25395202636719\n",
-      "epoch: 100 - loss: 0.2904473543167114\n",
-      "epoch: 200 - loss: 0.04665936529636383\n",
-      "epoch: 300 - loss: 0.00824813824146986\n",
-      "epoch: 400 - loss: 0.001177439116872847\n",
-      "epoch: 500 - loss: 1.976728526642546e-06\n",
-      "epoch: 600 - loss: 6.919663175786184e-10\n",
-      "epoch: 700 - loss: 2.66845739949062e-10\n",
-      "epoch: 800 - loss: 0.005539020989090204\n",
-      "epoch: 900 - loss: 7.803711810083769e-07\n",
-      "epoch: 1000 - loss: 0.0007560871308669448\n",
-      "epoch: 1100 - loss: 0.0002188003418268636\n",
-      "epoch: 1200 - loss: 0.00023929824237711728\n",
-      "epoch: 1300 - loss: 0.00015861724386923015\n",
-      "epoch: 1400 - loss: 0.0002590595977380872\n",
-      "epoch: 1500 - loss: 0.0003784483706112951\n",
-      "epoch: 1600 - loss: 1.1829299637611257e-06\n",
-      "epoch: 1700 - loss: 0.0016277838731184602\n",
-      "epoch: 1800 - loss: 2.8676597139565274e-05\n",
-      "epoch: 1900 - loss: 0.001076626474969089\n"
+      "epoch: 0 - loss: 44.27752685546875\n",
+      "epoch: 100 - loss: 0.6626996397972107\n",
+      "epoch: 200 - loss: 0.11533312499523163\n",
+      "epoch: 300 - loss: 0.04268794506788254\n",
+      "epoch: 400 - loss: 0.01995529979467392\n",
+      "epoch: 500 - loss: 0.009928187355399132\n",
+      "epoch: 600 - loss: 0.005761100444942713\n",
+      "epoch: 700 - loss: 0.003685793373733759\n",
+      "epoch: 800 - loss: 0.002435525180771947\n",
+      "epoch: 900 - loss: 0.0016005728393793106\n",
+      "epoch: 1000 - loss: 0.0010358832078054547\n",
+      "epoch: 1100 - loss: 0.0006946452776901424\n",
+      "epoch: 1200 - loss: 0.0004893009318038821\n",
+      "epoch: 1300 - loss: 0.00037968310061842203\n",
+      "epoch: 1400 - loss: 0.0003187202091794461\n",
+      "epoch: 1500 - loss: 0.0002757919719442725\n",
+      "epoch: 1600 - loss: 0.0006003559101372957\n",
+      "epoch: 1700 - loss: 0.00022667348093818873\n",
+      "epoch: 1800 - loss: 0.0002157936105504632\n",
+      "epoch: 1900 - loss: 0.004146499093621969\n"
      ]
     }
    ],
@@ -307,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 48,
    "id": "c5b34ad8-6c48-4b65-80a6-a731825ce376",
    "metadata": {},
    "outputs": [
@@ -317,7 +377,7 @@
        "torch.Size([1, 5, 1])"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 49,
    "id": "f022cc45-04b2-4da9-ba54-e57608a00d0d",
    "metadata": {},
    "outputs": [],
@@ -339,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 50,
    "id": "433d387e-f9c6-4166-8c95-007abf09b634",
    "metadata": {},
    "outputs": [
@@ -351,14 +411,14 @@
        "          [2.],\n",
        "          [3.],\n",
        "          [4.]]]),\n",
-       " tensor([[[-5.4820],\n",
-       "          [-3.7936],\n",
-       "          [ 2.8525],\n",
-       "          [ 0.9211],\n",
-       "          [ 4.8890]]], grad_fn=<CatBackward0>))"
+       " tensor([[[0.9955],\n",
+       "          [2.0001],\n",
+       "          [3.0002],\n",
+       "          [4.0002],\n",
+       "          [5.0001]]], grad_fn=<CatBackward0>))"
       ]
      },
-     "execution_count": 206,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a17fa4c-4b66-4452-8c16-d1917f0ab201",
+   "id": "afd89b2f-eeac-4445-8387-3c1a8a6cba97",
    "metadata": {},
    "outputs": [],
    "source": []
